welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()) {
      ^SnakeBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()) {
      ^SnakeBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
    else if (getDirection == Direction.OUEST) {
         ^SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur()) {
  ^