welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  avance()
  while (PositionFinale  == false) {
    avanceSerpent()
  }
}

def PositionFinale() : Boolean = {
  var Vrai = false
  if (estFaceMur()) {
    if (getDirection == Direction.EST) {
      gauche()
      if (estFaceMur()) {
        return true
      }
    }
    else if (getDirection == Direction.OUEST) {
      droite()
      if (estFaceMur()) {
        return true
      }
    }
  }
}  
  
def avanceSerpent() {
    if (estFaceMur == true && getDirection == Direction.OUEST) {
      droite()
      avance()
      droite()
    }
    else if (estFaceMur == true && getDirection == Direction.EST) {
      gauche()
      avance()
      gauche()
    }
  	else if(estFaceMur == false) {
    avance()
  }
  
}